# githubRepo2Pdf

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  pytest.ini  repo-to-pdf.py
.github/workflows/: test.yml
repo_to_pdf/: __init__.py  cli.py  converter.py
repo_to_pdf/converters/: emoji_handler.py  image_converter.py  latex_generator.py
repo_to_pdf/core/: config.py  constants.py  exceptions.py  path_matching.py  system_utils.py
repo_to_pdf/git/: repo_manager.py
repo_to_pdf/processors/: code_processor.py  file_processor.py  markdown_processor.py
repo_to_pdf/stats/: code_stats.py  directory_tree.py
tests/: __init__.py  test_integration.py  test_repo_to_pdf.py
tests/unit/: test_config.py  test_converter_claude_code_raw_markdown.py  test_file_processor.py
